# frapi

./: .gitignore  CHANGES.txt  CMakeLists.txt  README.txt  TODO.txt
array/: arrayallocate.f90
benchmark/IFA-432/: 432r1BOLlower.inp  432r1BOLupper.inp  432r2BOLlower.inp  432r2BOLupper.inp  432r3BOLlower.inp  IFA-432-r1.inp  IFA-432-r3.inp  fort.6  plot.py  profile.sh  test.py
benchmark/IFA-515/: 515ra2fea.inp  IFA-515-10rA1.inp  IFA-515-10rA2.inp  IFA-515-10rB1.inp  IFA-515-10rB2.inp  plot.py  test.py
benchmark/IFA-650.5/: ifa-650-5-fraptran.inp  run.py
benchmark/NRU-MT/: clean.sh  debug.sh  nru-mt1.inp  run.py  script.gdb
benchmark/RAST-K/: data.inp  data.py  data2.inp  err.py  plot.py  ref.out  run.sh  test.py
benchmark/REP-NA/: REP-Na1-RIA.in  clean.sh  compare_states.py  debug.sh  make.sh  rep-na1-frapcon.inp  rep-na1-fraptran.inp  run.py
debugtests/test1/: run.sh  test1.f90
debugtests/test2/: CMakeLists.txt  clean.sh  run.sh  test1.f90
debugtests/test3/: run.sh  script.gdb  test.f90
debugtests/test4/: debug.sh  figs.py  plot.py  plot_tfuel.py  run.sh  script.gdb  test.inp  test1.f90  test_mcs.f90
debugtests/test5/: CMakeLists.txt  int2str.f90  plot2h5.py  run.sh  test1.f90
doc/: userguide.aux  userguide.snm  userguide.tex
doc/UserGuide/: makefigs.py  userguide.tex
doc/manual/: userguide.dvi  userguide.tex  userguide1.tex
frapcon/: README.TXT
frapcon/Dating/: Dating.f90
frapcon/Include/: fc_allocate_h.f90  fc_associate_h.f90  fc_b_allocate_h.f90  fc_b_deallocate_h.f90  fc_b_variables_h.f90  fc_copy_b2r_h.f90  fc_copy_f2r_h.f90  fc_copy_k2r_h.f90  fc_copy_r2b_h.f90  fc_copy_r2f_h.f90  fc_copy_r2k_h.f90  fc_deallocate_h.f90  fc_default_h.f90  fc_dump_h.f90  fc_k_default_h.f90  fc_k_variables_h.f90  fc_load_h.f90  fc_load_state_h.f90  fc_pointers_h.f90  fc_r_allocate_h.f90  fc_r_deallocate_h.f90  fc_r_variables_h.f90  fc_replicants_h.f90  fc_save_state_h.f90  fp_allocate_h.f90  fp_associate_h.f90  fp_deallocate_h.f90  fp_dump_h.f90  fp_load_h.f90  fp_load_state_h.f90  fp_pointers_h.f90  fp_replicants_h.f90  fp_save_state_h.f90  variables.py
frapcon/frap/: CladCreep.f90  CladDeformation.f90  Comde.f90  Conversions.f90  Coolant.f90  Corrosion.f90  DecayHeat.f90  Deformation.f90  Developer.f90  FileIO.f90  FissionGas.f90  FuelDeformation.f90  Functions.f90  GadRadPower.f90  Initialization.f90  Kind.f90  Material_Properties.f90  Output_Data.f90  Plenum.f90  PlotFile.f90  Refabrication.f90  Restart.f90  RunProperties.f90  SetupProblem.f90  SpentFuel.f90  Temperature.f90  TimeStep.f90  Variables.f90  ZrModels.f90  burnup.f90  driver.f90  fdate.f90  fracas.f90  void.f90
frapcon/matpro/: Gases.f90  MOX.f90  MiscMaterials.f90  UraniumDioxide.f90  Zirconium.f90  ZirconiumDioxide.f90
frapcon/mech/: FEA_IO.f90  FEA_Mesh.f90  FEA_Setup.f90  FEA_deallocate.f90  FEA_node.f90  StaticFEA.f90  cladding.f90  common_parameters.f90  cont1d.f90  cont2d.f90  cont3d.f90  data_grid.f90  gascav1d.f90  gascav2d.f90  gascav3d.f90  geometry.f90  hex8.f90  m5_cladding.f90  materials.f90  math.f90  mech.f90  nlfemp_stop.f90  nuclear_fuel.f90  pressure1d.f90  pressure2d.f90  pressure3d.f90  quad4.f90  solid1d.f90  sparse_direct.f90  sparse_matrix.f90  spring.f90
frapi/: conversions.f90  fpc_reader.f90  fpn_reader.f90  fpt_reader.f90  frapi.f90  frapi_ivars.f90  frstate.f90  h5file.f90  odfile.f90  save2file.f90  spline1d.f90  string_functions.f90
fraptran/: README.NIX  mod_rename.py
fraptran/envrl/: WaterProperties.f90  sth2x.f90
fraptran/frap/: AxialPower.f90  Ballooning.f90  Conversions.f90  CoolProperties.f90  Driver.f90  Dyna.f90  ErrorMsg.f90  FissionGasRelease.f90  FuelRod.f90  Functions.f90  GammaHeating.f90  HeatConduction.f90  HeatTransferCoefficient.f90  Kind.f90  Material_Properties.f90  OutputFile.f90  Oxidation.f90  Plenum.f90  PlotFile.f90  Preread.f90  RadialNodes.f90  Read_Input.f90  Restart.f90  RunProperties.f90  TH_Link.f90  Temperature.f90  TimeStep.f90  Uncertainties.f90  Uncertainty_Vals.f90  Variables.f90  ZircSpecHeat.f90  ZrModels.f90  bcdcom.f90  bloon.f90  cesiod.f90  cnvt.f90  collct.f90  cominp.f90  convergence.f90  cool.f90  (+21 more)
fraptran/include/: fp_inputvars_h.f90  fp_ivars_h.f90  ft_allocate_h.f90  ft_associate_h.f90  ft_b_allocate_h.f90  ft_b_deallocate_h.f90  ft_b_variables_h.f90  ft_compare_h.f90  ft_copy_b2r_h.f90  ft_copy_f2r_h.f90  ft_copy_k2r_h.f90  ft_copy_r2b_h.f90  ft_copy_r2f_h.f90  ft_copy_r2k_h.f90  ft_deallocate_h.f90  ft_default_h.f90  ft_dump_h.f90  ft_k_allocate_h.f90  ft_k_associate_h.f90  ft_k_default_h.f90  ft_k_variables_h.f90  ft_load_h.f90  ft_pointers_h.f90  ft_print_h.f90  ft_r_allocate_h.f90  ft_r_deallocate_h.f90  ft_r_variables_h.f90  ft_replicants_h.f90  ft_v_allocate_h.f90
fraptran/matpro/: Gases.f90  MOX.f90  MiscMaterials.f90  UraniumDioxide.f90  Zirconium.f90  ZirconiumDioxide.f90
fraptran/mech/: FEA_IO.f90  FEA_Mesh.f90  FEA_Node.f90  FEA_Setup.f90  FEA_deallocate.f90  StaticFEA.f90  cladding.f90  common_parameters.f90  cont1d.f90  cont2d.f90  cont3d.f90  data_grid.f90  fraptran_variables.f90  gascav1d.f90  gascav2d.f90  gascav3d.f90  geometry.f90  hex8.f90  m5_cladding.f90  materials.f90  math.f90  (+11 more)
include/: fi_fpt_outvars_h.f90  fi_ivars_h.f90  fi_optassignment_h.f90  fi_optstatement_h.f90  fi_varlist_h.f90  varlist.f90
math/: array_allocate.f90  array_clone.f90  arrayallocate.f90  if_a_else_b.f90  interp1d.f90  linterp.f90  round.f90
src/: fpn4rastk.f90  fpn_reader.f90  frapi.f90  fuelrod.f90  h5file.f90  linteg.f90  linterp.f90  test.f90
src_test/: frapcon_input_file.f90  frapcon_original.f90  fraptran_original.f90  rastk_input_file.f90  test.f90
test/: 0.inp  1.inp  2.inp  data.inp  data.py  integ.py  main_frapcon.f90  main_fraptran.f90  plot.py  test.py  test2.py  test_frapi.f90  test_frapi2.f90  test_frapi_fpc.f90  test_problem.f90  test_rastk.f90
utils/: findvars.py  findvars2.py  frap2h5.py  frapcon2h5.py  frapi.py  frapi2h5.py  fraptran2h5.py  ft_all_targets.f90  make_ft_h.py  mod_rename_all.py  readerf90.py  rename.sh  sortvars.py  test.py  variables.py  varmanager.py  vars.f90
(+63 files in other folders)
